--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="logo.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="hsl(167, 73%, 85%)">
+    <meta name="theme-color" content="#e5d7b0">
     <meta
       name="description"
       content="Web site created using create-react-app"
